dapp install evolutionlandorg/land

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/apostle"]
 	path = lib/apostle
 	url = https://github.com/evolutionlandorg/apostle
+[submodule "lib/land"]
+	path = lib/land
+	url = https://github.com/evolutionlandorg/land
