--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/land"]
 	path = lib/land
 	url = https://github.com/evolutionlandorg/land
+[submodule "lib/common-contracts"]
+	path = lib/common-contracts
+	url = https://github.com/evolutionlandorg/common-contracts
