--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/token-contracts"]
 	path = lib/token-contracts
 	url = https://github.com/evolutionlandorg/token-contracts
+[submodule "lib/zeppelin-solidity"]
+	path = lib/zeppelin-solidity
+	url = https://github.com/OpenZeppelin/zeppelin-solidity
