dapp install evolutionlandorg/bank

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/id"]
 	path = lib/id
 	url = https://github.com/evolutionlandorg/id
+[submodule "lib/bank"]
+	path = lib/bank
+	url = https://github.com/evolutionlandorg/bank
