dev: support PolkaPet

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # addresses config
-export DEPLOY_CONFIG=~/workspace/contract/evolutionlandorg/evo-deploy/bin/conf/pangolin.json 
+export DEPLOY_CONFIG=~/workspace/contract/evolutionlandorg/evo-deploy/bin/conf/ropsten.json 
 
-export DEPLOY_CHAIN=pangolin
+export DEPLOY_CHAIN=ropsten
