--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/furnace"]
 	path = lib/furnace
 	url = https://github.com/evolutionlandorg/furnace
+[submodule "lib/governance"]
+	path = lib/governance
+	url = https://github.com/evolutionlandorg/governance
