--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/zeppelin-solidity"]
 	path = lib/zeppelin-solidity
 	url = https://github.com/OpenZeppelin/zeppelin-solidity
+[submodule "lib/raffle"]
+	path = lib/raffle
+	url = https://github.com/evolutionlandorg/raffle
