--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "lib/pve"]
 	path = lib/pve
 	url = https://github.com/evolutionlandorg/pve
+[submodule "lib/landrs"]
+	path = lib/landrs
+	url = https://github.com/evolutionlandorg/landrs
